fix: fix gap

--- a/rs-lang/src/app/pages/textbook/textbook.component.scss
+++ b/rs-lang/src/app/pages/textbook/textbook.component.scss
@@ -87,7 +87,7 @@
       justify-content: center;
       align-items: center;
       flex-wrap: wrap;
-      gap: 36px;
+      gap: 16px 36px;
     }
   }
 
